--- a/css/neurospacefield.css
+++ b/css/neurospacefield.css
@@ -1,6 +1,6 @@
 body {
 	color:#333333;
-	background-color:#ecebe4;
+	background-color:#eeeeee;
 	text-align:center;
 	font-family:Helvetica;
 	font-weight:100;"
